--- a/Web.config
+++ b/Web.config
@@ -17,8 +17,8 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
-	  <authentication mode ="Forms">
-		  <forms loginUrl="~/Account/Login" timeout="3600"></forms>
+	  <authentication mode="Forms">
+		  <forms loginUrl="~/Account/Login" timeout="3600" cookieless="UseCookies" slidingExpiration="true" />
 	  </authentication>
   </system.web>
   <runtime>
